# Tricky

./: pyproject.toml
tricky/: cli.py  configs.py  metrics.py  sampling.py  train.py
