[tool.poetry]
name = "tricky"
version = "0.1.0"
description = ""
authors = ["Bradley-Butcher <bradleydpbutcher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.3.2"
trl = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
